gcc/testsuite/rust/rustc/ui/parser/doc-before-mod-rbrace.rs
mod Foo {
    /// document
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

